--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!--HEADER-->
     <header v-if="!mostrar('loader-ticket')">
       <div class="header"
-        v-if="!mostrar('checkout') && !mostrar('carro') && !mostrar('portada') && !mostrar('comandes') && !mostrar('login') && !mostrar('profile')">
+        v-if="!mostrar('checkout') && !mostrar('carro') && !mostrar('portada') && !mostrar('comandes') && !mostrar('login') && !mostrar('profile') && !mostrar('check-order')">
         <div class="black-info">
           <a @click="cambiarDiv('portada')">
             <img class="header__logo" src="img/logoPressidis.PNG" alt="">
